samples/_failures_safe/1761207465_ddbabb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbfcca81.c: In function ‘main’:
./samples/SAFE/__tmp_cbfcca81.c:163:25: error: missing terminating " character
  163 |         fprintf(stderr, "Error reading input
      |                         ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cbfcca81.c:163:9: error: expected expression at end of input
  163 |         fprintf(stderr, "Error reading input
      |         ^~~~~~~
./samples/SAFE/__tmp_cbfcca81.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbfcca81.c:163:9: error: expected declaration or statement at end of input
